# Aetherion-Astrophysics-Suite

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  Contributing.md  DEPENDENCIES.md  DEPENDENCY_GRAPH.csv  DEPENDENCY_GRAPH_NODES.csv  Dependencies.md  FAQ_TROUBLESHOOTING.md  LICENSE  README.md  RELEASE-NOTES-0.2.0-beta2.md  TODO.md  Troubleshooting.md  UNIFIED_WINDOW_MANAGEMENT.md  bundle_app.sh  make_exe.sh  make_pkg.sh  makebackground.py  makedisktexture.py  rebuild_linux.sh  rebuild_macos.sh  rebuild_windows.ps1  rebuild_windows.sh  rebuld_macos.sh
.github/workflows/: physics-tests.yml
docs/: 2d-research-roadmap.md
flatpak/: get-checksums.sh  io.github.0xLiam0920.AetherionSuite.desktop  io.github.0xLiam0920.AetherionSuite.json  io.github.0xLiam0920.AetherionSuite.metainfo.xml
scripts/: generate_dependency_graph.py
shaders/: bloom_composite.frag  blur.frag  luminosity_highpass.frag  simple.vert
src/: Info.plist.in  platform.hpp
src/2D/: BlackHole2D.cpp
src/2D/2D-core/: body_visual.hpp  types.hpp
src/2D/2D-physics/: geodesic.hpp  integrator.hpp  kerr.hpp  pulsar_orbital.hpp  schwarzschild.hpp  units.hpp
src/2D/2D-rendering/: camera.hpp  renderer.hpp
src/2D/2D-simulation/: FITS_export.hpp  black_hole.hpp  csv_export.hpp  orbiting_body.hpp  photon.hpp  research_data.hpp  simulation.hpp
src/2D/2D-ui/: controls.hpp
src/2D/2D-utils/: key_config_2d.hpp  presets_2d.hpp
src/2D/2D-visualization/: orbit_visualizer.hpp  ray_visualizer.hpp
src/3D/: .gitignore  BlackHole3D.cpp  BlackHole3D.cpp.bak  BlackHole3D.frag  BlackHole3D_PhotorealDisk.frag  bh3d_blackbody.hpp  bh3d_bloompipeline.hpp  bh3d_camera.hpp  bh3d_catalog_adapter.hpp  bh3d_core.hpp  bh3d_input.hpp  bh3d_presets.hpp  bh3d_simulationstates.hpp  bh3d_textureutils.hpp  bloom_pipeline.hpp  camera_controller.hpp  config.hpp  framebuffer.hpp  gl_font.hpp  gl_types.hpp  hud_imgui.hpp  hud_panel.hpp  imgui_qt_adapter.hpp  input.hpp  orbital_body.hpp  physics_overlay.hpp  presets.hpp  resource_manager.hpp  shader_sources.hpp  shader_utils.cpp  shader_utils.hpp  simulation_state.hpp  texture_utils.cpp
src/MAIN-MENU/: app_state.hpp  launcher.hpp  libraries.hpp  main.cpp  page_registry.hpp
src/MAIN-MENU/pages/: breakdown.hpp  data_analysis.hpp  export.hpp  object_library.hpp  overview.hpp  settings.hpp  simulation.hpp
src/QT-LAUNCHER/: Info.plist.in  bh_preview_widget.cpp  bh_preview_widget.h  custom_bh_dialog.cpp  custom_bh_dialog.h  keybindbuttonwidget.cpp  keybindbuttonwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  sfml_canvas.cpp  sfml_canvas.h  simulation_2d_widget.cpp  simulation_2d_widget.h  simulation_3d_widget.cpp  simulation_3d_widget.cpp.bak  simulation_3d_widget.h  updater.cpp  updater.h
src/common/: catalog.hpp
src/common/resources/catalog/: 3c_273.json  a0620_00.json  gaia_bh1.json  gaia_bh2.json  gaia_bh3.json  gro_j1655_40.json  j0529_4351.json  m87.json  ngc_1277.json  oj_287.json  phoenix_a.json  placeholder.json  sgr_a.json  ton_618.json  v404_cygni.json
tests/: physics_regression_tests.cpp
